tests/assignment/faulty_missing.sy
start :: fn do
    a = 2
end

// error: Failed to resolve "a"
